# stm32-speech-recognition

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  toolchain.config
.github/workflows/: cmake-single-platform.yml
debug/: gdbfile  ozone.jdebug
docs/: README.md
docs/assets/: title.xcf
docs/slides/: presentation.tex
docs/slides/figures/: stft.odp
include/: clock.h  debug_io.h  dfsdm.h  dma.h  error.h  interrupt.h  mic.h  pins.h  serial.h  stm32_mpu.h  stm32l4xx_hal_conf.h  usbd_conf.h  usbd_desc.h  zmodem_helper.h
include/models/: hello_world_float_model_data.h  hello_world_int8_model_data.h  model_tflite.h  sample_input.h
ld/: stm32l443kcux.ld  stm32l475vgtx.ld
ml/: requirements.txt  simple_audio.py  train.py
src/: clock.c  debug_io.c  debug_log.cc  dfsdm.c  dma.c  error.c  flash.c  interrupts.c  main.c  main.cc  mic.cc  micro_time.cc  serial.c  syscalls.c  sysmem.c  system_setup.cc  system_stm32l4xx.c  usbd_conf.c  usbd_desc.c  zmodem_glue.c  zmodem_helper.cc
tools/: README.md  convert-wav.py  eval_one.py  eval_plot.py  eval_testset.py  plot-confusion-matrix.py  plot-fft-from-numpy.py  plot-fft-from-stm32.py  plot-microphone.py  plot-sound.py  plot-wav.py  replay.py  requirements.txt  sendfile.py  spectrogram.py
tools/eval_data/: no-125-cmsisnn.csv  no-125-unoptimized.csv  no-150-unoptimized-serial.csv  optimized.csv  yes-125-cmsisnn.csv  yes-125-unoptimized.csv  yes-150-unoptimized-serial.csv
